--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ics_webpack",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "scripts": {
+    "build": "webpack --mode development"
+  },
   "devDependencies": {
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1"
