--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "build": "webpack --mode development",
-    "start": "webpack serve"
+    "start": "webpack serve",
+    "watch": "webpack --watch"
   },
   "devDependencies": {
     "webpack": "^5.59.1",
