--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "watch": "webpack --watch"
   },
   "devDependencies": {
+    "css-loader": "^6.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
